annimate_core/tests/snapshots/metadata__initial.snap
---
source: annimate_core/tests/metadata.rs
---
metadata-version = 1

[corpus-sets."Test set"]
corpus-names = ["subtok.demo"]
