annimate_core/tests/snapshots/metadata__rename_corpus_set.snap
---
source: annimate_core/tests/metadata.rs
---
metadata-version = 1

[corpus-sets."Test set"]
corpus-names = [
    "subtok.demo",
    "subtok.demo2",
]

[corpus-sets."Test set 2 new"]
corpus-names = ["subtok.demo"]

[corpus-sets."Test set 3"]
corpus-names = []
