annimate_core/tests/snapshots/metadata__toggle1.snap
---
source: annimate_core/tests/metadata.rs
---
metadata-version = 1

[corpus-sets."Test set"]
corpus-names = []
