annimate_core/tests/snapshots/metadata__toggle2.snap
---
source: annimate_core/tests/metadata.rs
---
metadata-version = 1

[corpus-sets."Test set"]
corpus-names = ["subtok.demo2"]
